--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -16,7 +16,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-base64": "^0.0.2",
     "react-native-fs": "^2.16.2",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-tab-view": "^2.15.2",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
